--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -1,5 +1,24 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+@font-face {
+  font-family: "Clab";
+  src: url("../fonts/clab/clab.otf");
+}
+@font-face {
+  font-family: "Clab";
+  src: url("../fonts/clab/clab_bold.otf");
+  font-weight: bold;
+}
+@font-face {
+  font-family: "Clab";
+  src: url("../fonts/clab/clab_italic.otf");
+  font-style: italic;
+}
+@font-face {
+  font-family: "Clab";
+  src: url("../fonts/clab/clab_bold_italic.otf");
+  font-weight: bold;
+  font-style: italic;
+}
 body,
 ul {
   margin: 0;
@@ -7,7 +26,6 @@ ul {
   background-color: #ffffff00;
   text-align: center; 
 }
-
  a {
   color:rgb(253, 253, 253);
   text-decoration: none;
@@ -18,16 +36,24 @@ a:hover {
   text-decoration: none;
   color: rgb(8, 253, 61);
 }
-.nav-link {
+#logo {
+  width: 50px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  font-size: 1.5rem;
+  margin-left: 20px;
+}
+.header {
+width:100%;
+  padding: 20px 20px;
   box-sizing: border-box;
-  height: 150px;
+  height: 75px;
   padding: 1rem;
   display: flex;
   align-items: center;
-  justify-content: center;
-  background: #3d166c;
-  position:relative;
-  z-index: 1;
+  justify-content: space-between;
+  background: #05050502;/*
+  z-index: 1;*/
 }
 #menu {
   display: flex;
@@ -45,4 +71,35 @@ a:hover {
   display: none;
   font-family: 'Raleway', sans-serif;
   border:none;
+}
+#hamburger {
+  border-top: 2px solid;
+  width: 20px;
+  margin-left: 10px;
+  color: white;
+  
+}
+#hamburger::after,
+#hamburger::before {
+  content: '';
+  display: block;
+  width: 20px;
+  height: 2px;
+  background: currentColor;
+  margin-top: 2px;
+  transition: 0.3s;
+  position: relative;
+}
+#nav.active #hamburger {
+  border-top-color: transparent;
+}
+#nav.active #hamburger::before {
+  transform: rotate(135deg);
+}
+#nav.active #hamburger::after {
+  transform: rotate(-135deg);
+  top:-4px;
+}
+.header {
+  background: #3d166c;
 }
